Fix text overflow issue; make text bigger on mobile

--- a/src/app/tweet/tweet.component.sass
+++ b/src/app/tweet/tweet.component.sass
@@ -19,7 +19,9 @@ app-face
 
 .text
   color: black
+  font-size: 1.5rem
   line-height: 1.5em
+  overflow: hidden
   text-decoration: none
 
   @media only screen and (min-width: 640px)
